@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n6.c	1.21 (gritter) 9/18/05
+ * Sccsid @(#)n6.c	1.22 (gritter) 12/4/05
  */
 
 /*
@@ -211,6 +211,11 @@ setps(void)
 			getch();
 			getch();
 		}
+	} else if (i == '\'' && xflag) {
+		j = inumb(&apts);
+		if (nonumb)
+			return;
+		getch();
 	}
 }
 
